2003-08-11  Graham Percival  <gperlist@shaw.ca>

	* site/index.html: fix spelling (esthetics -> aesthetics).

2003-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* format-page.py: make the >  for separate entry.
	
	* format-page.py (button_row_spacer): surround tabs by spacer
	lines

	* site/about/automated-engraving/software.html (src): move all
	next links to right.

	* colors.css (a): add file for colored tab experiment

	* site/images/hader-slaan.jpeg: rename.

	* format-page.py (grab_title): (c) notice.

2003-08-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/index.html (href): fix URL.
	kroeger deb to 1.8

	* site/index.html (href): tweaks to improve doc link visibility

	* site/download/getting-started.html (href): remove lilypond icon.

	* site/switch/testimonials.html: add Carter's quote.

	* site/switch/index.html: change gorgeous to beautiful. Being
	modest gives a better impression. 

	* site/: spelling fixes, courtesy Chris Jackson.

2003-08-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (href): Fix cygwin links.

	* site/about/doneet.html (href): Fix participating link.

	* site/switch/testimonials.html (href): Typo.

2003-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Apply Anthony's changes for Debian.
	Move Cygwin to bottom.

2003-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* format-page.py (do_one_file): 
	no bottom nav bar.

2003-08-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: Use http:// for Debian.

2003-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/screenshots.html: move to switch/howto.html

2003-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* format-page.py (one_tab): add > before Home. Setup commit
	diffing.
	
2003-08-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Mods.

2003-07-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/using.html: Make links local, point directly to
	Tutorial.
